--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "devDependencies": {
     "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^4.0.0",
-    "astro": "^2.10.7",
+    "@astrojs/tailwind": "^5.0.0",
+    "astro": "^3.1.2",
     "astro-robots-txt": "^0.3.8"
   },
   "dependencies": {
     "@astrojs/mdx": "^0.19.7",
+    "@astrojs/react": "^3.0.2",
     "tailwindcss": "^3.3.3"
   }
 }
